--- a/src/main/resources/templates/adminsettings.vm
+++ b/src/main/resources/templates/adminsettings.vm
@@ -1,1 +1,153 @@
-<p>This is the Jira Timetracker Plugin Admin Settings Page. Welcome!</p>
+<form name="adminSettingForm"  method="post" action="JiraTimetrackerAdminSettingsWebAction.jspa"/>   
+	<div id="plugin_head" class="item-header">
+ 			<h1 class="item-summary">Timetracker Global Settings</h1>
+  	</div>
+  	<div id="main-content" class="content rounded" >
+		<div style="margin:10px; ">
+			<table  width="80%" padding:"5px" >
+				<tbody>
+					<tr>
+						<td style="text-align: right; vertical-align: top;" width="15%">
+							<h3>$i18n.getText("plugin.setting.non.working.issues")</h3>
+						</td>
+						<td >
+							<div id="issueSelect_container" class="ajax_autocomplete atlassian-autocomplete" style="margin-bottom: 35px" >
+								<select class="hidden"
+										multiple="none" 
+							   			name="issueSelect" 
+										id="issueSelect" 
+							   			data-popup-link-message="" 
+							   			data-popup-width="620" 
+							   			data-popup-height="500" 
+							   			data-remove-on-un-select="true" 
+							   			data-ajax-options.query="true" 
+							   			data-ajax-options.url="${req.contextPath}/rest/api/1.0/issues/picker" 
+							   			data-ajax-options.data.query="-" 
+							   			data-ajax-options.data.current-issue-key=""
+							   			data-ajax-options.data.show-sub-tasks="true" 
+								    	data-ajax-options.data.show-sub-task-parent="true"
+										#if (${action.currentJQL})
+											data-ajax-options.data.current_jql=${action.currentJQL}
+										#end>
+								</select> 
+								<script>
+										var ip = new AJS.IssuePicker({
+								  		element: AJS.$("#issueSelect"),
+								 		userEnteredOptionsMsg: AJS.params.enterIssueKey,
+								  		uppercaseUserEnteredOnSelect: true,
+								  		singleSelectOnly: true,
+								   		currentProjectId: $projectsId,
+										});
+										//Set the issues key all of them	
+										AJS.$("#issueSelect-textarea").append("$issueKey");
+										ip.handleFreeInput();
+								</script>
+							</div>
+							<div class="description">
+										$i18n.getText("plugin.setting.non.working.issues.help")
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: right;  vertical-align: top;" width="15%">
+							<h3>$i18n.getText("plugin.setting.nonestimated.issues")</h3>
+						</td>
+						<td >
+							<div id="issueSelect_container_collector" class="ajax_autocomplete atlassian-autocomplete" style="margin-bottom: 35px" >
+								<select class="hidden"
+										multiple="none" 
+							   			name="issueSelect_collector" 
+										id="issueSelect_collector" 
+							   			data-popup-link-message="" 
+							   			data-popup-width="620" 
+							   			data-popup-height="500" 
+							   			data-remove-on-un-select="true" 
+							   			data-ajax-options.query="true" 
+							   			data-ajax-options.url="${req.contextPath}/rest/api/1.0/issues/picker" 
+							   			data-ajax-options.data.query="-" 
+							   			data-ajax-options.data.current-issue-key=""
+							   			data-ajax-options.data.show-sub-tasks="true" 
+								    	data-ajax-options.data.show-sub-task-parent="true"
+										#if (${action.currentJQL})
+											data-ajax-options.data.current_jql=${action.currentJQL}
+										#end>
+								</select> 
+								<script>
+										var ip = new AJS.IssuePicker({
+								  		element: AJS.$("#issueSelect_collector"),
+								 		userEnteredOptionsMsg: AJS.params.enterIssueKey,
+								  		uppercaseUserEnteredOnSelect: true,
+								  		singleSelectOnly: true,
+								   		currentProjectId: $projectsId,
+										});
+										//Set the issues key all of them	
+										AJS.$("#issueSelect_collector-textarea").append("$collectorIssueKey");
+										ip.handleFreeInput();
+								</script>
+							</div>
+							<div class="description">
+									$i18n.getText("plugin.setting.nonestimated.issues.help")
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: right; vertical-align: top;" width="15%">
+							<div style="margin-bottom: 10px; margin-top: 20px;">
+								<h3>$i18n.getText("plugin.setting.working.day")</h3>
+							</div>	
+						</td>
+						<td>
+							<div class="description" style="margin-top: 20px;">
+										$i18n.getText("plugin.setting.working.day.help")
+							</div>
+						</td>	
+					</tr>
+					<tr>
+						<td style="text-align: right;  vertical-align: top;" width="15%">
+							<strong>$i18n.getText("plugin.setting.exclude.dates")</strong>
+						</td>
+						<td>
+							<div id="messageExclude" style="color: red; ">
+		 							$i18n.getText($messageExclude) $messageParameterExclude
+		  					</div>
+							<textarea id="excludedates" name="excludedates"></textarea>
+							<script>
+								AJS.$("#excludedates").append("$excludeDates");
+							</script>
+							<div class="description">
+									$i18n.getText("plugin.setting.exclude.dates.help")
+							</div>
+						</td>		
+					</tr>
+					<tr>
+						<td style="text-align: right;  vertical-align: top;" width="15%">
+							<strong>$i18n.getText("plugin.setting.include.dates")</strong>
+						</td>
+						<td>
+							<div id="messageInclude" style="color: red; ">
+		 							$i18n.getText($messageInclude) $messageParameterInclude
+		  					</div>
+							<textarea id="includedates" name="includedates"></textarea>
+							<script>
+								AJS.$("#includedates").append("$includeDates");
+							</script>
+							<div class="description">
+									$i18n.getText("plugin.setting.include.dates.help")
+							</div>
+						</td>		
+					</tr>
+					<tr class="buttons-container">
+						<td colspan="2">
+							<input id="savesettings"  type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="button"/>
+							<input id="resetButton"  type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerAdminSettingsWebAction.jspa'" class="button"/>
+							<input id="cancelButton"  type="button" name="cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='/secure/AdminSummary.jspa'" class="button"/>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			
+		</div>
+	</div>
+	
+	
+</from>
