Fixed summary space bug.

--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -84,13 +84,15 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 				</script>
 			#end
 			</div>
-			<div id="summary" style="text-align: right; float: right; padding:5px;">
-				<p>$i18n.getText("plugin.summary") $i18n.getText("plugin.day") ($daySummary) $i18n.getText("plugin.week") ($weekSummary) $i18n.getText("plugin.month") ($monthSummary)
-				#if($issuesId.size() != 0)
-					</br>$i18n.getText("plugin.real.work") $i18n.getText("plugin.summary") $i18n.getText("plugin.day") ($dayFilteredSummary) $i18n.getText("plugin.week") ($weekFilteredSummary) $i18n.getText("plugin.month") ($monthFilteredSummary)
-				#end
-				</p>
+			<div id="summary" style="text-align: right; float: right; padding-right: 5px;">
+				$i18n.getText("plugin.summary") $i18n.getText("plugin.day") ($daySummary) $i18n.getText("plugin.week") ($weekSummary) $i18n.getText("plugin.month") ($monthSummary)
 			</div>
+				#if($issuesId.size() != 0)
+				<div id="summary_real" style="text-align: right; float: right; padding-right: 5px;">
+					$i18n.getText("plugin.real.work") $i18n.getText("plugin.summary") $i18n.getText("plugin.day") ($dayFilteredSummary) $i18n.getText("plugin.week") ($weekFilteredSummary) $i18n.getText("plugin.month") ($monthFilteredSummary)
+				</div>
+				#end
+			
 		    #parse("templates/list.vm")
 	   		</br>
 	   		<div id="inputfields" name="inputfields">
